src/test/deca/context/invalid/sansObjet/.bashrc
PATH=./src/test/script/launchers:"$PATH"
